--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,11 +10,11 @@
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_simple"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_simple"
             android:title="@string/menu_simple" />
         <item
             android:id="@+id/nav_overkill"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_overkill"
             android:title="@string/menu_overkill" />
     </group>
 </menu>
