--- a/app/src/main/res/drawable/ic_dice.xml
+++ b/app/src/main/res/drawable/ic_dice.xml
@@ -4,27 +4,27 @@
     android:viewportWidth="1000"
     android:viewportHeight="1000">
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M182.7,754.2h634.7v63.5h-634.7z"/>
+      android:pathData="M225.3,720.3h550v55h-550z"
+      android:fillColor="#BFAE9F"/>
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M182.7,182.3h634.7v63.5h-634.7z"/>
+      android:pathData="M225.3,225.3h550v55h-550z"
+      android:fillColor="#BFAE9F"/>
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M182.63,816.97l0,-634.7l63.5,0l-0,634.7z"/>
+      android:pathData="M225.1,225.3h55v550h-55z"
+      android:fillColor="#BFAE9F"/>
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M753.83,816.97l0,-634.7l63.5,0l-0,634.7z"/>
+      android:pathData="M720,225.3h55v550h-55z"
+      android:fillColor="#BFAE9F"/>
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M500.3,500.3m-32.2,0a32.2,32.2 0,1 1,64.4 0a32.2,32.2 0,1 1,-64.4 0"/>
+      android:pathData="M500.3,500.3m-25,0a25,25 0,1 1,50 0a25,25 0,1 1,-50 0"
+      android:fillColor="#BFAE9F"/>
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M375.3,625.2m-32.2,0a32.2,32.2 0,1 1,64.4 0a32.2,32.2 0,1 1,-64.4 0"/>
+      android:pathData="M400.3,600.2m-25,0a25,25 0,1 1,50 0a25,25 0,1 1,-50 0"
+      android:fillColor="#BFAE9F"/>
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M625.2,375.3m-32.2,0a32.2,32.2 0,1 1,64.4 0a32.2,32.2 0,1 1,-64.4 0"/>
+      android:pathData="M600.2,400.3m-25,0a25,25 0,1 1,50 0a25,25 0,1 1,-50 0"
+      android:fillColor="#BFAE9F"/>
   <path
-      android:fillColor="#bfae9f"
-      android:pathData="M500,10c66.2,0 130.3,13 190.7,38.5c58.3,24.7 110.8,60 155.8,105c45,45 80.3,97.4 105,155.8C977,369.7 990,433.8 990,500s-13,130.3 -38.5,190.7c-24.7,58.3 -60,110.8 -105,155.8c-45,45 -97.4,80.3 -155.8,105C630.3,977 566.2,990 500,990s-130.3,-13 -190.7,-38.5c-58.3,-24.7 -110.8,-60 -155.8,-105c-45,-45 -80.3,-97.4 -105,-155.8C23,630.3 10,566.2 10,500s13,-130.3 38.5,-190.7c24.7,-58.3 60,-110.8 105,-155.8s97.4,-80.3 155.8,-105C369.7,23 433.8,10 500,10M500,0C223.9,0 0,223.9 0,500s223.9,500 500,500s500,-223.9 500,-500S776.1,0 500,0L500,0z"/>
+      android:pathData="M500,10c66.2,0 130.3,13 190.7,38.5c58.3,24.7 110.8,60 155.8,105s80.3,97.4 105,155.8C977,369.7 990,433.8 990,500s-13,130.3 -38.5,190.7c-24.7,58.3 -60,110.8 -105,155.8s-97.4,80.3 -155.8,105C630.3,977 566.2,990 500,990s-130.3,-13 -190.7,-38.5c-58.3,-24.7 -110.8,-60 -155.8,-105s-80.3,-97.4 -105,-155.8C23,630.3 10,566.2 10,500s13,-130.3 38.5,-190.7c24.7,-58.3 60,-110.8 105,-155.8s97.4,-80.3 155.8,-105C369.7,23 433.8,10 500,10M500,0C223.9,0 0,223.9 0,500s223.9,500 500,500s500,-223.9 500,-500S776.1,0 500,0L500,0z"
+      android:fillColor="#BFAE9F"/>
 </vector>
