--- a/app/src/main/res/drawable/ic_divide.xml
+++ b/app/src/main/res/drawable/ic_divide.xml
@@ -4,15 +4,15 @@
     android:viewportWidth="1000"
     android:viewportHeight="1000">
   <path
-      android:fillColor="#d96e30"
-      android:pathData="M148.3,430.3h705.1v141h-705.1z"/>
+      android:pathData="M225.8,473.3h550v55h-550z"
+      android:fillColor="#D96E30"/>
   <path
-      android:fillColor="#d96e30"
-      android:pathData="M500,701.6m-70.5,0a70.5,70.5 0,1 1,141 0a70.5,70.5 0,1 1,-141 0"/>
+      android:pathData="M500,701.6m-50,0a50,50 0,1 1,100 0a50,50 0,1 1,-100 0"
+      android:fillColor="#D96E30"/>
   <path
-      android:fillColor="#d96e30"
-      android:pathData="M500,300m-70.5,0a70.5,70.5 0,1 1,141 0a70.5,70.5 0,1 1,-141 0"/>
+      android:pathData="M500,300m-50,0a50,50 0,1 1,100 0a50,50 0,1 1,-100 0"
+      android:fillColor="#D96E30"/>
   <path
-      android:fillColor="#d96e30"
-      android:pathData="M500,10c66.2,0 130.3,13 190.7,38.5c58.3,24.7 110.8,60 155.8,105c45,45 80.3,97.4 105,155.8C977,369.7 990,433.8 990,500s-13,130.3 -38.5,190.7c-24.7,58.3 -60,110.8 -105,155.8c-45,45 -97.4,80.3 -155.8,105C630.3,977 566.2,990 500,990s-130.3,-13 -190.7,-38.5c-58.3,-24.7 -110.8,-60 -155.8,-105c-45,-45 -80.3,-97.4 -105,-155.8C23,630.3 10,566.2 10,500s13,-130.3 38.5,-190.7c24.7,-58.3 60,-110.8 105,-155.8s97.4,-80.3 155.8,-105C369.7,23 433.8,10 500,10M500,0C223.9,0 0,223.9 0,500s223.9,500 500,500s500,-223.9 500,-500S776.1,0 500,0L500,0z"/>
+      android:pathData="M500,10c66.2,0 130.3,13 190.7,38.5c58.3,24.7 110.8,60 155.8,105s80.3,97.4 105,155.8C977,369.7 990,433.8 990,500s-13,130.3 -38.5,190.7c-24.7,58.3 -60,110.8 -105,155.8s-97.4,80.3 -155.8,105C630.3,977 566.2,990 500,990s-130.3,-13 -190.7,-38.5c-58.3,-24.7 -110.8,-60 -155.8,-105s-80.3,-97.4 -105,-155.8C23,630.3 10,566.2 10,500s13,-130.3 38.5,-190.7c24.7,-58.3 60,-110.8 105,-155.8s97.4,-80.3 155.8,-105C369.7,23 433.8,10 500,10M500,0C223.9,0 0,223.9 0,500s223.9,500 500,500s500,-223.9 500,-500S776.1,0 500,0L500,0z"
+      android:fillColor="#D96E30"/>
 </vector>
